cabal-version:      2.4
name:               md2html
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             dragomir003
maintainer:         dragolekovic@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Md2Html, MdAst, MdParser

    other-modules: MdParser.Internal

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, parsec
    hs-source-dirs:   src
    default-language: Haskell2010

executable md2html
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        md2html

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite parser-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test-parser
  build-depends:
    base, HUnit, md2html, tasty, tasty-hunit, parsec
  default-language: Haskell2010

